tests/lean/bad_quoted_symbol.lean
notation a ` \/ ` b := a ∨ b
notation a `1\/` b := a ∨ b
notation a ` \ / ` b := a ∨ b
notation a ` ` b := a ∨ b
notation `
